--- a/frontend/index.html
+++ b/frontend/index.html
@@ -141,30 +141,33 @@
                 </button>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#">Forum Home</a>
-                    </li>
-                    <li class="nav-item dropdown" ng-if="!isLogged()">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Login
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#" ng-click="openModal('login-modal')">Login</a>
-                            <a class="dropdown-item" href="#" ng-click="openModal('register-user-modal')">Register</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown" ng-if="isLogged()">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Benvenuto {{current_user.username}}
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#" ng-click="openModal('edit-user-modal')">Modifica Profilo</a>
-                            <a class="dropdown-item" href="#" ng-click="goToAdminArea()" ng-if="isAdmin()">Admin Area</a>
-                            <a class="dropdown-item" href="#" ng-click="forum.doLogout()">Logout</a>
-                        </div>
-                    </li>
-                  </ul>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Forum Home</a>
+                        </li>
+                        <li class="nav-item dropdown" ng-if="!isLogged()">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Login
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#" ng-click="openModal('login-modal')">Login</a>
+                                <a class="dropdown-item" href="#" ng-click="openModal('register-user-modal')">Register</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown" ng-if="isLogged()">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Benvenuto {{current_user.username}}
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#" ng-click="openModal('edit-user-modal')">Modifica Profilo</a>
+                                <a class="dropdown-item" href="#" ng-click="goToAdminArea()" ng-if="isAdmin()">Admin Area</a>
+                                <a class="dropdown-item" href="#" ng-click="forum.doLogout()">Logout</a>
+                            </div>
+                        </li>
+                        <li class="nav-item active" ng-if="isLogged()">
+                            <a class="nav-link" href="#" style="color: rgba(0,0,0,.5);">Login Scade In {{getExpRemainingHours()}}h</a>
+                        </li>
+                    </ul>
                   <!-- <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -222,7 +225,7 @@
                             <td class="Fix" nowrap="nowrap"><b>&nbsp;Data&nbsp;</b></td>
                             <td class="Fix" nowrap="nowrap">
                                 <datepicker date-format="dd-MM-yyyy">
-                                    <input maxlength="10" name="FD" style="width:120px;" title="Ricerca messaggi per data" type="text" aria-haspopup="true" ng-model="searchDate" class="angular-datepicker-input">
+                                    <input maxlength="20" name="FD" style="width:120px;" title="Ricerca messaggi per data" type="text" aria-haspopup="true" ng-model="search_date" ng-change="doSearchDate(this)" class="angular-datepicker-input">
                                     <span class="mat-datepicker-toggle" matsuffix="">
                                         <button aria-haspopup="true" mat-icon-button="" type="button" class="mat-icon-button" aria-label="Open calendar" tabindex="0" style="background-color: transparent; border: 0;">
                                             <span class="mat-button-wrapper">
@@ -238,7 +241,12 @@
                                     </span>
                                 </datepicker>
                             </td>
-                            <td width="99%">&nbsp;</td>
+                            <td width="99%" ng-if="!is_search">&nbsp;</td>
+                            <td width="99%" ng-if="is_search" ng-click="doCancelSearch()" style="cursor: pointer; text-align: left;">
+                                <div class="rounded" style="width: 80%; text-align: center; background-color: cadetblue; padding: 0.2rem;">
+                                    <div class="rounded-circle" style="background-color: white; color: darkgrey; font-family: Arial, sans-serif; width: 1rem; height: 1rem; display: inline-block; line-height: 1rem;">X</div> Cancella Ricerca
+                                </div>
+                            </td>
                             <td class="Fix" nowrap="nowrap" style="font-size: small;"><b>&nbsp;Pag.N°&nbsp;</b></td>
                             <td><input maxlength="3" name="Pg" style="width:16px;" title="Pagina Corrente" type="text" ng-model="current_page"></td>
                             <td align="left"><img src="assets/Blu_Prev.gif" title="Pagina precedente" type="image" ng-click="forum.goToPreviousPage()"></td>
@@ -280,7 +288,7 @@
                         </td>
                         <td style="width:10%; text-align: center; font-size: 13px; font-weight: 700; color: rgba(0,0,0,.54); font-family: Verdana;">{{topic.topics.length}}</td>
                         <td style="width:10%; text-align: center; font-size: 13px; font-weight: 700; color: rgba(0,0,0,.54); font-family: Verdana;">{{topic.username}}</td>
-                        <td style="width:10%; text-align: center; font-size: 13px; font-weight: 700; color: rgba(0,0,0,.54); font-family: Verdana;">{{topic.updatedAt}}</td>
+                        <td style="width:10%; text-align: center; font-size: 13px; font-weight: 700; color: rgba(0,0,0,.54); font-family: Verdana;">{{topic.updatedAt | formatDate}}</td>
                         <td style="width:5%;">&nbsp;</td>
                     </tr>
 
@@ -446,15 +454,17 @@
                     </p>
 
                     <p>
-                        Username: <input type="text" name="topic" class="form-control" ng-model="forum.newUser.login" />
+                        Username: <input type="text" name="topic" class="form-control" ng-model="forum.newUser.login" my-enter="forum.login(forum.newUser);" />
                         <br>
-                        Password: <input type="text" name="subject" class="form-control" ng-model="forum.newUser.password" />
+                        Password: <input type="text" name="subject" class="form-control" ng-model="forum.newUser.password" my-enter="forum.login(forum.newUser);" />
                     </p>
 
                     <br>
 
                     <a href="#" ng-click="openModal('register-user-modal')">Registrati</a>
 
+                    <br>
+                    <br>
                     <br>
 
                     <button ng-click="forum.login(forum.newUser);" class="btn btn-primary">Login</button>
