--- a/frontend/index.html
+++ b/frontend/index.html
@@ -187,7 +187,7 @@
         </div>
 
         <!-- Forum Threads -->
-        <div class="container-fluid mx-auto" style="width: 90%; height: 100%;">
+        <div id="forum_container" class="container-fluid mx-auto" style="width: 100%; height: 100%;">
             <!-- Forum List Nav -->
             <div class="container-fluid forum-tabs-container" style="padding: 0;">
                 <nav class="nav nav-pills nav-fill" style="border-bottom:darkgray thin solid;">
