--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,6 +127,30 @@
             font-family: Verdana;
         }
 
+        .table {
+            display: table;
+            width: 100%;
+            margin: 0;
+            padding: 0.5rem;
+            background-color: #215a94;
+        }
+        .row {
+            display: table-row;
+        }
+        .cell {
+            display: table-cell;
+        }
+        @media screen and (max-width: 768px) {
+            .cell {
+                display: table-row;
+            }
+            .row {
+                display: flex;
+                width: 100%;
+                justify-content: center;
+            }
+        }
+
     </style>
 </head>
 <body ng-app="forumApp" ng-cloak>
@@ -207,7 +231,7 @@
                 <!-- <span style="justify-self: flex-start;">Threads</span>
                 <button type="button" class="badge badge-pill badge-primary ml-3" style="justify-self: flex-end;" ng-click="openModal('new-topic-editor-modal')">Nuovo</button>-->
                 <!-- <button type="button" class="badge badge-pill badge-primary ml-3" style="justify-self: flex-end;" ng-click="sortAll(topics)">Sort</button> -->
-                <table border="0" cellpadding="1" cellspacing="1" height="20" class="forum-head" style="min-width:540px; background-color:#215a94; border-color:#EFEFEF;" valign="absmiddle" width="100%">
+                <!--<table border="0" cellpadding="1" cellspacing="1" height="20" class="forum-head" style="min-width:540px; background-color:#215a94; border-color:#EFEFEF;" valign="absmiddle" width="100%">
                     <tbody>
                         <tr>
                             <td>
@@ -229,7 +253,7 @@
                                     <span class="mat-datepicker-toggle" matsuffix="">
                                         <button aria-haspopup="true" mat-icon-button="" type="button" class="mat-icon-button" aria-label="Open calendar" tabindex="0" style="background-color: transparent; border: 0;">
                                             <span class="mat-button-wrapper">
-                                                <!---->
+                                                
                                                 <svg class="mat-datepicker-toggle-default-icon ng-star-inserted" fill="currentColor" focusable="false" height="24px" viewBox="0 0 24 24" width="24px">
                                                     <path d="M0 0h24v24H0z" fill="none"></path>
                                                     <path d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM7 10h5v5H7z"></path>
@@ -253,7 +277,52 @@
                             <td align="right"><img src="assets/Blu_Next.gif" title="Pagina successiva" type="image" ng-click="forum.goToNextPage()"></td>
                         </tr>
                     </tbody>
-                </table>
+                </table>-->
+                <div class="table">
+                    <div class="row">
+                        <div class="cell">
+                            <a href="#">
+                                <img border="0" src="assets/Blu_NewMsg.gif" title="Inserisce un nuovo messaggio" ng-click="openModal('new-topic-editor-modal', true)">
+                            </a>
+                        </div>
+                        <div class="cell">
+                            <input src="assets/Blu_Refresh.gif" title="Aggiorna la pagina e applica i parametri" type="image" ng-click="loadTopics()">
+                        </div>
+                        <div class="cell Fix"><b>&nbsp;Search&nbsp;</b></div>
+                        <div class="cell">
+                            <input maxlength="25" name="find" style="width:160px; font-size: small; color: #000000; font-family: Verdana;" title="Ricerca messaggi" type="text" searchtopics>
+                        </div>
+                        <div class="cell Fix"><b>&nbsp;Data&nbsp;</b></div>
+                        <div class="cell Fix">
+                            <datepicker date-format="dd-MM-yyyy">
+                                <input maxlength="20" name="FD" style="width:120px;" title="Ricerca messaggi per data" type="text" aria-haspopup="true" ng-model="search_date" ng-change="doSearchDate(this)" class="angular-datepicker-input">
+                                <span class="mat-datepicker-toggle" matsuffix="">
+                                    <button aria-haspopup="true" mat-icon-button="" type="button" class="mat-icon-button" aria-label="Open calendar" tabindex="0" style="background-color: transparent; border: 0;">
+                                        <span class="mat-button-wrapper">
+                                            
+                                            <svg class="mat-datepicker-toggle-default-icon ng-star-inserted" fill="currentColor" focusable="false" height="24px" viewBox="0 0 24 24" width="24px">
+                                                <path d="M0 0h24v24H0z" fill="none"></path>
+                                                <path d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM7 10h5v5H7z"></path>
+                                            </svg>
+                                        </span>
+                                        <div class="mat-button-ripple mat-ripple mat-button-ripple-round" matripple=""></div>
+                                        <div class="mat-button-focus-overlay"></div>
+                                    </button>
+                                </span>
+                            </datepicker>
+                        </div>
+                        <div class="cell" width="99%" ng-if="!is_search">&nbsp;</div>
+                        <div width="99%" ng-if="is_search" ng-click="doCancelSearch()" style="cursor: pointer; text-align: left; width: 99%;">
+                            <div class="rounded" style="width: 80%; text-align: center; background-color: cadetblue; padding: 0.2rem;">
+                                <div class="rounded-circle" style="background-color: white; color: darkgrey; font-family: Arial, sans-serif; width: 1rem; height: 1rem; display: inline-block; line-height: 1rem;">X</div> Cancella Ricerca
+                            </div>
+                        </div>
+                        <div class="cell Fix" nowrap="nowrap" style="font-size: small;"><b>&nbsp;Pag.N°&nbsp;</b></div>
+                        <div class="cell"><input maxlength="3" name="Pg" style="width:16px;" title="Pagina Corrente" type="text" ng-model="current_page"></div>
+                        <div class="cell" align="left"><img src="assets/Blu_Prev.gif" title="Pagina precedente" type="image" ng-click="forum.goToPreviousPage()"></div>
+                        <div class="cell" align="right"><img src="assets/Blu_Next.gif" title="Pagina successiva" type="image" ng-click="forum.goToNextPage()"></div>
+                    </div>
+                </div>
             </script>
 
             <!-- Forum Header Top -->
