--- a/frontend/index.html
+++ b/frontend/index.html
@@ -360,7 +360,7 @@
                             </div>
                         </td>
                         <td style="width:10%; text-align: center; font-size: 13px; font-weight: 700; color: rgba(0,0,0,.54); font-family: Verdana;">{{topic.topics.length}}</td>
-                        <td style="width:10%; text-align: center; font-size: 13px; font-weight: 700; color: rgba(0,0,0,.54); font-family: Verdana;">{{topic.username}}</td>
+                        <td style="width:10%; text-align: center; font-size: 13px; font-weight: 700; color: rgba(0,0,0,.54); font-family: Verdana; word-wrap: break-word;">{{topic.username}}</td>
                         <td style="width:10%; text-align: center; font-size: 13px; font-weight: 700; color: rgba(0,0,0,.54); font-family: Verdana;">{{topic.updatedAt | formatDate}}</td>
                         <td style="width:5%;">&nbsp;</td>
                     </tr>
