+maybe not flickering ?2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -417,7 +417,7 @@
                         Subject: <input type="text" name="subject" ng-model="forum.topic.subtitle" class="form-control" />
                     </p>
 
-                    <textarea ng-model="forum.topic.text" data-done-editing="doneEditing()" id="ckeditor-add" ckeditor></textarea>
+                    <textarea ng-model="forum.topic.text" id="ckeditor-add" ckeditor></textarea>
 
                     <br>
 
