--- a/frontend/index.html
+++ b/frontend/index.html
@@ -215,10 +215,6 @@
             <!-- Forum List Nav -->
             <div class="container-fluid forum-tabs-container" style="padding: 0;">
                 <nav class="nav nav-pills nav-fill" style="border-bottom:darkgray thin solid;">
-                    <!--<a class="nav-link active" href="#">Active</a>
-                    <a class="nav-link" href="#">Longer nav link</a>
-                    <a class="nav-link" href="#">Link</a>
-                    <a class="nav-link disabled" href="#">Disabled</a>-->
                     <li class="nav-item" ng-repeat="f in forumList track by $index" style="border: 0; cursor: pointer;">
                         <a class="nav-link forum-tab-active" ng-if="f.is_active" style="color: {{f.color}}; border-bottom: thick solid {{f.color}};">{{f.title}}</a>
                         <a class="nav-link forum-tab" ng-click="loadForum($event, $index, f)" ng-if="!f.is_active" style="color: {{f.color}}">{{f.title}}</a>
@@ -329,11 +325,11 @@
                 
                                 <div style="display: flex; flex-flow: row; justify-content: flex-end;  padding-bottom: 1.5rem;">
                                     <div class="btn-group btn-group-sm" role="group" aria-label="Thread Buttons">
-                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.topicOnClick('new_topic', topic)">New</button>
-                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.topicOnClick('add_topic', topic)">Add</button>
-                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.topicOnClick('reply_topic', topic)">Reply</button>
-                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.topicOnClick('edit_topic', topic)">Edit</button>
-                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.deleteTopic(topic)">Delete</button>
+                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.topicOnClick('new_topic', topic)">Nuovo</button>
+                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.topicOnClick('add_topic', topic)">Aggiungi</button>
+                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.topicOnClick('reply_topic', topic)">Rispondi</button>
+                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.topicOnClick('edit_topic', topic)">Modifica</button>
+                                        <button type="button" class="btn btn-outline-primary btn-sm topic-buttons" ng-click="forum.deleteTopic(topic)">Cancella</button>
                                     </div>
                                 </div>
                             </div>
@@ -377,8 +373,8 @@
 
                     <br>
 
-                    <button ng-click="forum.addNewTopic(forum.topic);" class="btn btn-primary">Save</button>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="forum.addNewTopic(forum.topic);" class="btn btn-primary">Salva</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal" ng-if="!isLogged()">
@@ -388,7 +384,7 @@
 
                     <br>
 
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal-background"></div>
@@ -417,8 +413,8 @@
 
                     <br>
 
-                    <button ng-click="forum.addTopicSameLevel(current_topic, forum.topic);" class="btn btn-primary">Save</button>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="forum.addTopicSameLevel(current_topic, forum.topic);" class="btn btn-primary">Salva</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal" ng-if="!isLogged()">
@@ -428,7 +424,7 @@
 
                     <br>
 
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal-background"></div>
@@ -457,8 +453,8 @@
 
                     <br>
 
-                    <button ng-click="forum.replyToTopic(current_topic, forum.topic);" class="btn btn-primary">Reply</button>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="forum.replyToTopic(current_topic, forum.topic);" class="btn btn-primary">Rispondi</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal-background"></div>
@@ -467,7 +463,7 @@
         <modal id="edit-topic-editor-modal">
             <div class="modal">
                 <div class="modal-body">
-                    <h1>Edit Topic: {{current_topic.title}}</h1>
+                    <h1>Modifica Argomento: {{current_topic.title}}</h1>
 
                     <p class="alert alert-success" ng-if="current_modal_msgs.successMsg">
                         {{current_modal_msgs.successMsg}}
@@ -488,7 +484,7 @@
                     <br>
 
                     <button ng-click="forum.editTopic(current_topic);" class="btn btn-primary">Salva Modifiche</button>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal-background"></div>
@@ -524,7 +520,7 @@
                     <br>
 
                     <button ng-click="forum.login(forum.newUser);" class="btn btn-primary">Login</button>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal-background"></div>
@@ -554,7 +550,7 @@
                     <br>
 
                     <button ng-click="forum.resetPassword(forum.newUser);" class="btn btn-primary">Recupera Password</button>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal-background"></div>
@@ -562,7 +558,7 @@
 
         <modal id="register-user-modal">
             <div class="modal">
-                <div class="modal-body">
+                <div class="modal-body" ng-if="!isLogged()">
                     <h1>Registrati</h1>
 
                     <p class="alert alert-success" ng-if="current_modal_msgs.successMsg">
@@ -584,7 +580,11 @@
                     <br>
 
                     <button ng-click="forum.registerNewUser(forum.newUser);" class="btn btn-primary">Register</button>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
+                </div>
+                <div class="modal-body" ng-if="isLogged()">
+                    <h1>Sei Gi&agrave; loggato, non puoi iscriverti due volte</h1>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal-background"></div>
@@ -614,11 +614,16 @@
                     <br>
 
                     <button ng-click="forum.editUser(forum.newUser);" class="btn btn-primary">Salva Modifiche</button>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
                 <div class="modal-body" ng-if="!isLogged()">
                     <h1>Devi Essere Loggato Per Modificare Il Tuo Profilo</h1>
-                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Close</button>
+                    <br>
+                    <a href="#" ng-click="closeCurrentModal(); openModal('login-modal')">Login</a>
+                    <br>
+                    <br>
+                    <br>
+                    <button ng-click="closeCurrentModal();" class="btn btn-primary">Chiudi</button>
                 </div>
             </div>
             <div class="modal-background"></div>
