--- a/frontend/index.html
+++ b/frontend/index.html
@@ -506,7 +506,7 @@
                     <p>
                         Username: <input type="text" name="topic" class="form-control" ng-model="forum.newUser.login" my-enter="forum.login(forum.newUser);" />
                         <br>
-                        Password: <input type="text" name="subject" class="form-control" ng-model="forum.newUser.password" my-enter="forum.login(forum.newUser);" />
+                        Password: <input type="password" name="subject" class="form-control" ng-model="forum.newUser.password" my-enter="forum.login(forum.newUser);" />
                     </p>
 
                     <br>
@@ -572,7 +572,7 @@
                     <p>
                         Username: <input type="text" name="topic" ng-model="forum.newUser.username" class="form-control" />
                         <br>
-                        Password: <input type="text" name="subject" ng-model="forum.newUser.password" class="form-control" />
+                        Password: <input type="password" name="subject" ng-model="forum.newUser.password" class="form-control" />
                         <br>
                         Email: <input type="text" name="subject" ng-model="forum.newUser.email" class="form-control" />
                     </p>
@@ -608,7 +608,7 @@
                         <br>
                         Nuova Password: <input type="password" name="password" ng-model="forum.newUser.newPassword" ng-init="forum.newUser.password = ''" class="form-control" />
                         <br>
-                        Email: <input type="text" name="email" ng-model="forum.newUser.email" ng-init="forum.newUser.email = current_user.email" class="form-control" />
+                        Email: <input type="text" name="email" ng-model="forum.newUser.email" ng-init="forum.newUser.email = current_user.email" class="form-control" readonly/>
                     </p>
 
                     <br>
